8201539: Crash in DirectWrite CreateBitmap code when running TestFX test suite

Defer CoUninitialize call to thread exit using dispose hook

Reviewed-by: kcr, mennen